2001-07-05  Christoph Pfisterer  <cp@chrisp.de>

	* Config.pm (set_param): Handle empty values.
	(save): Remove keys that are set to empty values from the file.

2001-06-30  Christoph Pfisterer  <cp@chrisp.de>

	* Package.pm (scan): Don't try to scan non-existing directories.

2001-06-28  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (phase_build): Added support for inline daemonic
	service description file.

2001-06-22  Christoph Pfisterer  <cp@chrisp.de>

	* Bootstrap.pm: Use the new dpkg-bootstrap package during
	bootstrap phase two.

	* Engine.pm (cmd_fetch_missing): Fix handling of partially fetched
	packages.

	* PkgVersion.pm: Provide full package name in all error messages.

2001-06-17  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm: Automatically create section name from
	path. Search parent directories for .deb files.
	* Engine.pm (cmd_scanpackages): Write section to override file.

	* Engine.pm (real_install): Added preliminary virtual package
	support.
	* Package.pm (scan): Add the right object to the provider list.
	* PkgVersion.pm (initialize): Removed special treatment for x11 in
	dependency list.

2001-06-16  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm: New methods to retreive dependency and conflict
	lists. Cache result of is_installed.

2001-06-14  Christoph Pfisterer  <cp@chrisp.de>

	* Engine.pm: Catch pure virtual packages in cmd_fetch_all and
	cmd_fetch_all_missing.

2001-06-13  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm: Removed get_onlyversion.

2001-06-12  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm: Make some 'rm -rf' failures non-fatal.

2001-06-06  Christoph Pfisterer  <cp@chrisp.de>

	* Package.pm: Virtual packages, step 1 - keeping track of the
	Provides in the data structures. Also, ignore files that start
	with a dot (.) or a hash (#).
	* PkgVersion.pm: Pass Provides, Replaces and Conflicts on to
	dpkg.

2001-06-05  Christoph Pfisterer  <cp@chrisp.de>
